--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>session-os</title>
+    <title>SessionOS | Inteligência Operacional em Suporte B2B</title>
+    <meta name="description" content="Plataforma exclusiva para gestão de sessões, mentorias e assets digitais. Acesse seu conteúdo e acompanhe sua evolução." />
+    <meta property="og:title" content="SessionOS - Inteligência Operacional" />
+    <meta property="og:description" content="Gestão eficiente de sessões e mentorias B2B." />
+    <meta property="og:image" content="/logo.png" />
+    <meta name="theme-color" content="#051426" />
   </head>
   <body>
     <div id="root"></div>
