--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SessionOS | Inteligência Operacional em Suporte B2B</title>
-    <meta name="description" content="Plataforma exclusiva para gestão de sessões, mentorias e assets digitais. Acesse seu conteúdo e acompanhe sua evolução." />
-    <meta property="og:title" content="SessionOS - Inteligência Operacional" />
-    <meta property="og:description" content="Gestão eficiente de sessões e mentorias B2B." />
-    <meta property="og:image" content="/logo.png" />
-    <meta name="theme-color" content="#051426" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sync Meet | Inteligência Operacional em Suporte B2B</title>
+  <meta name="description"
+    content="Plataforma exclusiva para gestão de sessões, mentorias e assets digitais. Acesse seu conteúdo e acompanhe sua evolução." />
+  <meta property="og:title" content="Sync Meet - Inteligência Operacional" />
+  <meta property="og:description" content="Gestão eficiente de sessões e mentorias B2B." />
+  <meta property="og:image" content="/logo.png" />
+  <meta name="theme-color" content="#051426" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
