feat: AI Content Remastering, Admin Editor, and UI Fixes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sync Meet | Inteligência Operacional em Suporte B2B</title>
+  <title>Sync Meet | Centralização e Automação de Mentorias B2B</title>
   <meta name="description"
-    content="Plataforma exclusiva para gestão de sessões, mentorias e assets digitais. Acesse seu conteúdo e acompanhe sua evolução." />
-  <meta property="og:title" content="Sync Meet - Inteligência Operacional" />
-  <meta property="og:description" content="Gestão eficiente de sessões e mentorias B2B." />
-  <meta property="og:image" content="/logo.png" />
+    content="Plataforma de inteligência operacional: Centralize gravações, automatize uploads para o YouTube e organize documentos estratégicos em um único cofre digital seguro." />
+  <meta property="og:title" content="Sync Meet | Centralização e Automação de Mentorias B2B" />
+  <meta property="og:description"
+    content="Centralize gravações, automatize uploads e organize documentos estratégicos em um cofre digital seguro." />
+  <meta property="og:image" content="/og-preview.png" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:image" content="/og-preview.png" />
+  <meta property="twitter:title" content="Sync Meet | Centralização e Automação de Mentorias B2B" />
+  <meta property="twitter:description"
+    content="Centralize gravações, automatize uploads e organize documentos estratégicos em um cofre digital seguro." />
   <meta name="theme-color" content="#051426" />
 </head>
 
